hs build errors on ppc64 and s390x platforms

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • None
    • b04
    • ppc, s390x
    • linux

      Since yesterday the build fails on linux s390x / ppc64(le).
      Looks like we miss inclusions after recent HS changes.

      errors:
        ppc64le

      ./src/hotspot/cpu/ppc/interp_masm_ppc_64.cpp: In member function 'void InterpreterMacroAssembler::set_method_data_pointer_for_bcp()':
      ./src/hotspot/cpu/ppc/interp_masm_ppc_64.cpp:1160:47: error: incomplete type 'MethodData' used in nested name specifier
         addi(R28_mdx, R28_mdx, in_bytes(MethodData::data_offset()));
                                                     ^~~~~~~~~~~
      ./src/hotspot/cpu/ppc/interp_masm_ppc_64.cpp: In member function 'void InterpreterMacroAssembler::increment_mdp_data_at(Register, Register, bool)':
      ./src/hotspot/cpu/ppc/interp_masm_ppc_64.cpp:1323:54: error: incomplete type 'DataLayout' used in nested name specifier
           addi(Rbumped_count, Rbumped_count, - DataLayout::counter_increment);
                                                            ^~~~~~~~~~~~~~~~~
      ./src/hotspot/cpu/ppc/interp_masm_ppc_64.cpp:1330:52: error: incomplete type 'DataLayout' used in nested name specifier
           addi(Rbumped_count, Rbumped_count, DataLayout::counter_increment);
                                                          ^~~~~~~~~~~~~~~~~
      ./src/hotspot/cpu/ppc/interp_masm_ppc_64.cpp: In member function 'void InterpreterMacroAssembler::set_mdp_flag_at(int, Register)':
      ./src/hotspot/cpu/ppc/interp_masm_ppc_64.cpp:1341:37: error: incomplete type 'DataLayout' used in nested name specifier
         lbz(scratch, in_bytes(DataLayout::flags_offset()), R28_mdx);

      s390x

      ./src/hotspot/cpu/s390/interp_masm_s390.cpp: In member function 'void InterpreterMacroAssembler::set_method_data_pointer_for_bcp()':
      ./src/hotspot/cpu/s390/interp_masm_s390.cpp:1180:48: error: incomplete type 'MethodData' used in nested name specifier
         add2reg_with_index(mdp, in_bytes(MethodData::data_offset()), Z_RET, mdp);
                                                      ^~~~~~~~~~~
      ./src/hotspot/cpu/s390/interp_masm_s390.cpp: In member function 'void InterpreterMacroAssembler::increment_mdp_data_at(Register, int, Register, bool)':
      ./src/hotspot/cpu/s390/interp_masm_s390.cpp:1220:46: error: incomplete type 'DataLayout' used in nested name specifier
         const int delta = decrement ? -DataLayout::counter_increment : DataLayout::counter_increment;
                                                    ^~~~~~~~~~~~~~~~~
      ./src/hotspot/cpu/s390/interp_masm_s390.cpp:1220:78: error: incomplete type 'DataLayout' used in nested name specifier
         const int delta = decrement ? -DataLayout::counter_increment : DataLayout::counter_increment;
                                                                                    ^~~~~~~~~~~~~~~~~
      ./src/hotspot/cpu/s390/interp_masm_s390.cpp: In member function 'void InterpreterMacroAssembler::set_mdp_flag_at(Register, int)':
      ./src/hotspot/cpu/s390/interp_masm_s390.cpp:1228:36: error: incomplete type 'DataLayout' used in nested name specifier
         z_oi(Address(mdp_in, DataLayout::flags_offset()), flag_byte_constant);
                                          ^~~~~~~~~~~~

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: