8248334: hs build errors on ppc64 and s390x platforms

Reviewed-by: dholmes, mdoerr